Tue Sep 17 13:10:05 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_27_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added C++11 test which tests operator <<= together with
          std::move

Tue Sep 17 12:12:16 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Corrected friend

        * tests/OS_Test.cpp:
          Zapped empty lines

Mon Sep 16 14:34:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Removed g++ specific code, that is really a GCC bug, see
          http://gcc.gnu.org/bugzilla/show_bug.cgi?id=50370

Mon Sep 16 10:48:29 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Using a default on the redeclaration only works with G++

Mon Sep 16 09:56:17 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_24_Test.cpp:
          Further extend this unit test with more code

Mon Sep 16 09:37:33 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Extended Embarcadero C++ Builder instructions

        * tests/Compiler_Features_24_Test.cpp:
          Further extend this unit test with more code

Mon Sep 16 06:53:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_26_Test.cpp:
          Fixed test macro in case of no C++11 features

Fri Sep 13 10:16:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added recommendation for windows users to use active state
          perl

Fri Sep 13 09:16:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_26_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added new C++11 test which tests shared_ptr comparison
          with nullptr
