@@ -93,10 +93,7 @@
           not: {
             contains_astnode: {
               dominated_by_astnode: {
-                and: [
-                    { contains_astnode: { not: { expression_kind: "throw" }}},
-                    { throws_type: { type_name_regex: "CORBA|DynamicAny|Deployment" }}
-                ]
+                     expression_kind: "throw" ,
               }
             }
           }
